[project]
name = "beam-node-sync"
version = "0.1.0"
description = "Trusted Beam node staged synchronizer that derives local regular-output state"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"beam-p2p",
	"cryptography>=41.0",
	"ecdsa>=0.19",
	"sqlalchemy>=2,<3",
]

[tool.uv.sources]
beam-p2p = { git = "https://github.com/roman-strilets/beam-p2p.git" }

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
